fixed thumbnail alignment

--- a/wp-content/themes/yaledailynews/css/ydn.css
+++ b/wp-content/themes/yaledailynews/css/ydn.css
@@ -6187,6 +6187,17 @@ li.comment {
 
 .content-list .item {
   margin-bottom: 20px;
+  *zoom: 1;
+}
+
+.content-list .item:before,
+.content-list .item:after {
+  display: table;
+  content: "";
+}
+
+.content-list .item:after {
+  clear: both;
 }
 
 .content-list .meta,
